// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DivSequenceRendering /> renders with no features 1`] = `
<div
  style="height: 16px; font-size: 12.8px;"
>
  <div
    style="display: flex;"
  />
</div>
`;

exports[`<DivSequenceRendering /> renders with one feature with a correct seq, zoomed in, should render nicely 1`] = `
<div
  style="height: 16px; font-size: 12.8px;"
>
  <div
    style="display: flex;"
  >
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgb(76, 175, 80); color: white; border-radius: 4px; box-sizing: border-box; border-collapse: collapse;"
    >
      A
    </div>
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgba(0, 0, 0, 0.26); color: rgba(0, 0, 0, 0.87); border-radius: 4px; box-sizing: border-box; border-collapse: collapse;"
    >
      B
    </div>
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgb(33, 150, 243); color: white; border-radius: 4px; box-sizing: border-box; border-collapse: collapse;"
    >
      C
    </div>
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgba(0, 0, 0, 0.26); color: rgba(0, 0, 0, 0.87); border-radius: 4px; box-sizing: border-box; border-collapse: collapse;"
    >
      D
    </div>
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgba(0, 0, 0, 0.26); color: rgba(0, 0, 0, 0.87); border-radius: 4px; box-sizing: border-box; border-collapse: collapse;"
    >
      E
    </div>
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgba(0, 0, 0, 0.26); color: rgba(0, 0, 0, 0.87); border-radius: 4px; box-sizing: border-box; border-collapse: collapse;"
    >
      F
    </div>
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgb(249, 168, 37); color: white; border-radius: 4px; box-sizing: border-box; border-collapse: collapse;"
    >
      G
    </div>
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgba(0, 0, 0, 0.26); color: rgba(0, 0, 0, 0.87); border-radius: 4px; box-sizing: border-box; border-collapse: collapse;"
    >
      H
    </div>
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgba(0, 0, 0, 0.26); color: rgba(0, 0, 0, 0.87); border-radius: 4px; box-sizing: border-box; border-collapse: collapse;"
    >
      I
    </div>
  </div>
</div>
`;

exports[`<DivSequenceRendering /> renders with one feature with an incorrect seq, zoomed in, should throw 1`] = `
<h1
  class="error"
>
  Error: feature one did not contain a valid \`seq\` attribute seq length 2 did not match 3
</h1>
`;

exports[`<DivSequenceRendering /> renders with one feature with no seq, zoomed in, should throw 1`] = `
<h1
  class="error"
>
  Error: feature one did not contain a valid \`seq\` attribute seq did not exist
</h1>
`;

exports[`<DivSequenceRendering /> renders with one, zoomed way out 1`] = `
<div
  style="height: 16px; font-size: 12.8px;"
>
  <div
    style="display: flex;"
  >
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgb(76, 175, 80); color: white;"
    />
    <div
      style="text-align: center; display: inline-block; height: 100%; overflow: hidden; min-height: 16px; flex: 1; background-color: rgba(0, 0, 0, 0.26); color: rgba(0, 0, 0, 0.87);"
    />
  </div>
</div>
`;
